<resources>
    <string name="app_name">BLE-nav-app</string>
    <string name="greeting">Вітаємо!</string>
    <string name="auth_text">Введіть корпоративну поштову скриньку та пароль для входу</string>
    <string name="email_box_text">Поштова скринька:</string>
    <string name="password_text">Пароль:</string>
    <string name="btn_confirm">Підтвердити</string>
    <string name="btn_guest">Я відвідувач</string>
    <string name="btn_audio">Аудіо</string>
    <string name="estimated_distance">Estimated distance:</string>
    <string name="button_text_my_geo">Моя локація</string>
    <string name="btn_floor_map">Мапа поверху</string>
</resources>