<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF2FF"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="41dp"
        android:width="279dp"
        android:height="44dp"
        android:background="@drawable/login_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/etPaswordText"
        android:layout_width="47dp"
        android:layout_height="15dp"
        android:layout_marginBottom="4dp"
        android:gravity="top"
        android:text="@string/password_text"
        android:textAppearance="@style/email_password_text"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="41dp"
        android:width="279dp"
        android:height="44dp"
        android:background="@drawable/login_box"
        android:paddingStart="41dp"
        android:paddingEnd="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/etEmailBoxText"
        android:layout_width="113dp"
        android:layout_height="18dp"
        android:layout_marginBottom="12dp"
        android:gravity="top"
        android:lineSpacingExtra="3sp"
        android:text="@string/email_box_text"
        android:textAppearance="@style/email_password_text"
        android:translationY="-1.74sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="279dp"
        android:layout_height="48dp"
        android:backgroundTint="#5C709F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <TextView
        android:id="@+id/guest_button"
        android:layout_width="73dp"
        android:layout_height="18dp"
        android:clickable="true"
        android:gravity="top"
        android:lineSpacingExtra="3sp"
        android:text="@string/btn_guest"
        android:textAppearance="@style/guest_button"
        android:translationY="-1.74sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />

    <TextView
        android:id="@+id/tvButtonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:elevation="2dp"
        android:lineSpacingExtra="3sp"
        android:text="@string/btn_confirm"
        android:textColor="#ECF2FF"
        android:textSize="12sp"
        android:translationY="-1.74sp"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@id/btnConfirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnConfirm"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/btnConfirm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <ImageView
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="616dp"
        android:src="@drawable/logo_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="207dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="545dp"
        android:fontFamily="@font/inter_variable_font_slnt_wght"
        android:gravity="top"
        android:lineSpacingExtra="9sp"
        android:text="@string/greeting"
        android:textColor="@color/auth_logo_greetings_confirm_color"
        android:textSize="35sp"
        android:textStyle="bold"
        android:translationY="-4.64sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auth_text"
        android:layout_width="283dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="41dp"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="@string/auth_text"
        android:textAppearance="@style/auth_text"
        android:translationY="-2.32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting" />

    <Button
        android:id="@+id/btCompass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="Компас"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="Мапа"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>









